feat: further enhance friends stats
- implement achievement leaderboard comparing with friends
- show user's stats even if not in top ranking